services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
    # - nodePort: 31000
    - port: 8000
      protocol: TCP
      targetPort: 80
  selector:
    app: api
  type: NodePort
status:
  loadBalancer: {}
